# Analyse-CGE-Francais

./: .gitignore  LICENSE  README.md  TODO.md  main.py  pyproject.toml  requirements.txt  setup.py
analyse-cge/: gestionnaire_fichier.py  main.py
analyse-cge/affichage/: gestionnaire_affichage.py
analyse-cge/fichier/: gestionnaire_source.py
analyse-cge/tracabilite/: __init__.py  traces.py
analyse_cge/: __init__.py  main.py
analyse_cge/affichage/: gestionnaire_affichage.py
analyse_cge/cli/: gestionnaire_arguments.py  gestionnaire_commande.py  menu.py
analyse_cge/cli/test/: camembert_autre.py  evolution.py
analyse_cge/config/: menus_cli.json
analyse_cge/donnees/: db.py  db_ministere.json  gestionnaire_donnees.py  nettoyage_valeur.py
analyse_cge/fichier/: detection_donnees.py  gestionnaire_arborescence.py  gestionnaire_json.py  gestionnaire_source.py
analyse_cge/gui/: evolution_ministere.py  gestionnaire_gui.py  menu.py
analyse_cge/gui/tests/: evolution_ministere.py  graph_click.py  menu.py  test1.py  test2.py
analyse_cge/gui/tests/tuto/: grid.py
analyse_cge/gui/tuto/: frames.py  grid.py  premiere_class.py
analyse_cge/gui/tuto/exemples/: exemple1.py
analyse_cge/gui/tuto/fenetre/: exemple1.py
analyse_cge/journalisation/: traces.py
analyse_cge/source/: detection_donnees.py  gestionnaire_arborescence.py  gestionnaire_json.py  gestionnaire_source.py
docs/: .~lock.source.csv#  .~lock.source_reduite.csv#  db_ministere.json  papercut.json  source_reduite.csv
docs/old/: pyproject.toml
install/: install_macos.command
