[tool.poetry]
name = "analyse-cge-francais-sae105"
version = "0.1.0"
description = ""
authors = ["aymericschaeffer <schaeffer.aymeric@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.2"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
